[gd_scene load_steps=14 format=3 uid="uid://bcvkuddrqymwy"]

[ext_resource type="Script" uid="uid://j2i23wymw14s" path="res://Scripts/player.gd" id="1_fkybt"]
[ext_resource type="Texture2D" uid="uid://dq2atv272m15y" path="res://Sprites/Explosions/explosion0.png" id="1_vgqql"]
[ext_resource type="Texture2D" uid="uid://b0juigrq111um" path="res://Sprites/Explosions/explosion1.png" id="2_fkybt"]
[ext_resource type="PackedScene" uid="uid://6rf754jltt1f" path="res://Scenes/bullet.tscn" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://ckhqtyetk51pv" path="res://Sprites/Explosions/explosion2.png" id="3_x3wgy"]
[ext_resource type="Texture2D" uid="uid://fyb0udqpmycp" path="res://Sprites/Player/working mech v2GSH_scaled.png" id="6_tx1dd"]
[ext_resource type="Texture2D" uid="uid://b3iecejgql0mc" path="res://Sprites/Shields/shields.png" id="7_tx1dd"]
[ext_resource type="Texture2D" uid="uid://0eutb8ydc56g" path="res://Sprites/Shields/shields2.png" id="8_gymyn"]
[ext_resource type="Texture2D" uid="uid://b6wtyjxa2xvga" path="res://Sprites/Shields/shields3.png" id="9_pu2lt"]
[ext_resource type="Texture2D" uid="uid://djh2nl1eb2bat" path="res://Sprites/Shields/shields4.png" id="10_ukyrk"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8erm5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vgqql")
}, {
"duration": 1.0,
"texture": ExtResource("2_fkybt")
}, {
"duration": 1.0,
"texture": ExtResource("3_x3wgy")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_tx1dd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 57.0
height = 132.0

[sub_resource type="SpriteFrames" id="SpriteFrames_7dp3o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_tx1dd")
}, {
"duration": 1.0,
"texture": ExtResource("8_gymyn")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu2lt")
}, {
"duration": 1.0,
"texture": ExtResource("10_ukyrk")
}, {
"duration": 1.0,
"texture": ExtResource("9_pu2lt")
}, {
"duration": 1.0,
"texture": ExtResource("8_gymyn")
}, {
"duration": 1.0,
"texture": ExtResource("7_tx1dd")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["player"]]
scale = Vector2(0.5, 0.5)
collision_mask = 129
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fkybt")
Bullet = ExtResource("2_x3wgy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_8erm5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vgqql")

[node name="CannonTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(15, 0)
rotation = 1.5708

[node name="Muzzle2" type="Marker2D" parent="."]
position = Vector2(15, -9)
rotation = 1.5708

[node name="Muzzle3" type="Marker2D" parent="."]
position = Vector2(15, 9)
rotation = 1.5708

[node name="Muzzle4" type="Marker2D" parent="."]
position = Vector2(0, -50)
rotation = 1.309

[node name="Muzzle5" type="Marker2D" parent="."]
position = Vector2(0, 50)
rotation = 1.8326

[node name="Shield" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7dp3o")
speed_scale = 2.0

[connection signal="timeout" from="CannonTimer" to="." method="_on_cannon_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="animation_finished" from="Shield" to="." method="_on_shield_animation_finished"]
